--- a/front/package.json
+++ b/front/package.json
@@ -9,20 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.9"
+    "next": "14.2.3"
   },
   "devDependencies": {
+    "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^18.3.1",
+    "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3"
   }
 }
